--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <title>GraceJohnson813.github.io</title>
     <body>
 <h1>Grace's Games</h1>
 <p>My games live here now</p>
